Fix sticky footer

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,14 @@
-.main {
-  flex: 1;
+html {
+  height: 100%;
+}
+
+body > div {
+  min-height: 100%;
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
+}
+
+.main {
+  /* flex: 1; would be enough but it looks bad in IE */
+  flex: 1 0 auto;
 }
